Fix mobile header layout issue, and more adjustments to mobile layout

--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@
 
   --clr-gray: #9e9e9e;
   --clr-gray01: #858b9c;
+  --clr-gray02: #6a6f7c;
   --clr-white: #fff;
   --clr-neutral: #f5f5f5;
   --clr-light-gray: #e7e8ec;
@@ -112,6 +113,9 @@ body {
   max-width: 45rem;
   padding-inline: 1.5rem;
   margin: 0 auto;
+}
+.mobile-header > .items--body {
+  padding: 0rem 0rem;
 }
 .flex {
   display: flex;
@@ -251,6 +255,9 @@ p {
 .bg-white {
   background-color: var(--clr-white);
 }
+.bg-transparent {
+  background-color: transparent;
+}
 .bg-light-pink {
   background-color: var(--clr-light-pink);
 }
@@ -262,6 +269,12 @@ p {
 }
 .bg-light-gray {
   background-color: var(--clr-light-gray);
+}
+.bg-dark-gray {
+  background-color: #ced0d7;
+}
+.bg-gray01 {
+  background-color: var(--clr-gray01);
 }
 .bg-orange {
   background-color: var(--clr-orange);
@@ -369,11 +382,11 @@ p {
   overflow: auto;
   white-space: nowrap;
   display: none;
+  width: 100%;
 }
 .mobile-header > .items {
-  padding: 0.5rem 2rem;
   width: 100%;
-  gap: 2rem;
+  gap: 7vw;
 }
 .mobile-header::-webkit-scrollbar {
   display: none;
@@ -382,6 +395,9 @@ p {
   flex-basis: 50%;
   flex-direction: column;
   padding: 1rem;
+}
+.mobile-header > .items > .item > img {
+  width: 100%;
 }
 .mobile-header > .items > .item:active {
   border: 1px solid var(--clr-brand-pink);
@@ -622,12 +638,11 @@ p {
   flex-wrap: nowrap;
   white-space: nowrap;
   width: 100%;
-  padding: 1rem;
   overflow: auto;
   overflow-x: scroll;
   overflow-y: hidden;
   flex-direction: column;
-  --flow-gap: min(1vw, 1rem);
+  --flow-gap: min(1vw, 0.2rem);
 }
 @media (max-width: 50em) {
   .items-container--options {
@@ -641,7 +656,6 @@ p {
   flex-wrap: nowrap;
   white-space: nowrap;
   width: 100%;
-  padding: 1rem;
   display: flex;
 }
 .items-container--options > .items > .item {
@@ -691,10 +705,9 @@ p {
   .scroll-container {
     margin: 1rem 0;
     right: 50%;
-    width: 5rem;
-    height: 1rem;
+    width: 15vw;
+    height: 1vh;
     border-radius: 1rem;
-    border: 1px solid black;
   }
   .scroll-container > .scroll {
     width: 60%;
@@ -867,7 +880,7 @@ p {
   border-radius: 3rem;
   width: 100%;
   height: 5vw;
-  font-size: 1vw;
+  font-size: 2.66667vw;
 }
 .progress-bar {
   align-items: center;
